--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,13 @@
 {
   "name": "my doodle tab",
   "version": "1.0",
-  "description": "homage momentum",
+  "description": "doodle tab will make you smile",
   "permissions": ["tabs", "storage"],
   "chrome_url_overrides": {
     "newtab": "index.html"
+  },
+  "icons": {
+    "128": "main_icon.png"
   },
   "manifest_version": 2
 }
